--- a/Update Movie Project/src/pages/Public/Login/LoginPage.css
+++ b/Update Movie Project/src/pages/Public/Login/LoginPage.css
@@ -3,12 +3,15 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f0f0f0;
+  background-image: url("C:\Users\Carlo\Downloads\Premium Photo _ Composition of popcorns.jpg"); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
   font-family: Arial, sans-serif;
 }
 
 .form-container {
-  background-color: white;
+  background-color: rgb(248, 246, 246);
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
