--- a/Update Movie Project/src/pages/Public/Register/RegisterPage.css
+++ b/Update Movie Project/src/pages/Public/Register/RegisterPage.css
@@ -1,9 +1,13 @@
 .main-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url("C:\Users\Carlo\Downloads\Premium Photo _ Composition of popcorns.jpg"); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  font-family: Arial, sans-serif;
     
   }
   
