--- a/Update Movie Project/src/pages/Main/Main.css
+++ b/Update Movie Project/src/pages/Main/Main.css
@@ -3,34 +3,51 @@
   overflow: hidden;
   max-height: 100vh;
 }
+
 .Main .container {
   display: flex;
   width: 100vw;
 }
+
 .Main .container .outlet {
   flex-grow: 3;
   padding: 1rem;
   overflow-y: auto;
 }
+
 .Main .container .navigation {
   background-color: aliceblue;
   padding-top: 40px;
   height: 100vh;
+  width: 80px; /* Default width when collapsed */
+  overflow: hidden;
+  transition: width 0.3s ease; /* Smooth transition for width */
 }
+
+.Main .container .navigation:hover {
+  width: 200px; /* Expanded width on hover */
+}
+
 .Main .container .navigation ul {
   list-style: none;
-  overflow: hidden;
   padding: 0;
   margin: 0;
 }
 
 .Main .container .navigation ul li {
-  padding: 10px 80px 10px 20px;
+  padding: 10px 20px;
+  transition: padding 0.3s ease; /* Smooth transition for padding */
 }
+
+.Main .container .navigation:hover ul li {
+  padding: 10px 20px 10px 40px; /* Increased padding on hover for expanded menu */
+}
+
 .Main .container .navigation ul li.active,
 .Main .container .navigation ul li:hover {
   background: #ccc;
 }
+
 .Main .container .navigation ul li a {
   text-decoration: none;
 }
