--- a/Update Movie Project/src/pages/Public/Login/LoginPage.css
+++ b/Update Movie Project/src/pages/Public/Login/LoginPage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("C:\Users\Carlo\Documents\admin-dashboard-carlo-bernardo-bsit3a\public\Premium Photo _ Composition of popcorns.jpg"); 
+  background-image: url("C:\Users\Carlo\Documents\admin-dashboard-carlo-bernardo-bsit3a\public\download (1).jpg"); 
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
@@ -55,3 +55,6 @@ label {
   width: 100%;
   margin-top: 0.5rem;
   font-size: 0.9rem;}
+
+
+
