--- a/Update Movie Project/src/pages/Public/Register/RegisterPage.css
+++ b/Update Movie Project/src/pages/Public/Register/RegisterPage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("C:\Users\Carlo\Downloads\Premium Photo _ Composition of popcorns.jpg"); 
+  background-image: url("C:\Users\Carlo\Documents\admin-dashboard-carlo-bernardo-bsit3a\public\download (1).jpg"); 
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
