--- a/Update Movie Project/src/pages/Main/Movies/Lists/Lists.css
+++ b/Update Movie Project/src/pages/Main/Movies/Lists/Lists.css
@@ -1,42 +1,129 @@
+
 .lists-container {
-  padding: 20px;
+  padding: 10px;
+  
 }
 
+
 .create-container {
+  display: flex;
+  justify-content: flex-end;
   margin-bottom: 20px;
 }
 
-.table-container {
-  overflow-x: auto;
-}
-
-.movie-lists {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.movie-lists th,
-.movie-lists td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
-
-.movie-lists th {
-  background-color: #f4f4f4;
-  font-weight: bold;
-}
-
-.button-list {
-  margin: 0 5px;
-  padding: 5px 10px;
+.button-create {
+  padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
-  border-radius: 4px;
+  font-size: 16px;
 }
 
-.button-list:hover {
+.button-create:hover {
   background-color: #0056b3;
+}
+
+
+.movie-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 10px;
+  padding: 20px;
+  row-gap: 20px; 
+  column-gap: 5px; 
+}
+
+
+
+
+.movie-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #060000;
+}
+
+.movie-info {
+  font-size: 14px;
+  color: #060000;
+  margin: 1px 0;
+}
+
+.movie-info span {
+  font-weight: bold;
+  color: #060000;
+}
+
+
+.movie-actions {
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
+  right: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-edit,
+.button-delete {
+  width: 48%;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.button-edit {
+  background-color: #ffc107;
+  color: #fff;
+}
+
+.button-delete {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.button-edit:hover {
+  background-color: #e0a800;
+}
+
+.button-delete:hover {
+  background-color: #c82333;
+}
+.movie-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 16px;
+  background-color: #ffffff;
+  width: 250px;  
+  height: 450px; 
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+.movie-card:hover {
+  transform: scale(1.05);
+}
+
+.movie-poster {
+  width: 100%;
+  height: auto;
+  max-width: 150px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
+
+.movie-details {
+  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
