--- a/Update Movie Project/src/pages/Public/Register/RegisterPage.css
+++ b/Update Movie Project/src/pages/Public/Register/RegisterPage.css
@@ -11,26 +11,27 @@
     
   }
   
-  .form-container {
-    padding: 4rem 2rem;
+  .Rform-container {
+    padding: 15px 100px;
     border: 1px solid #ccc;
     border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: #f7f4f4;
   }
-  .form-container > div {
-    margin-bottom: 12px;
+  .Rform-container > div {
+    margin-bottom: 1px;
   }
   
-  .form-group {
+  .Rform-group {
     display: flex;
     flex-direction: column;
-    margin-bottom: 3px;
+    margin-bottom: 1px;
   }
   
-  .form-group label {
+  .Rform-group label {
     width: 130px;
     margin-right: 10px;
     text-align: left;
@@ -47,6 +48,8 @@
     text-align: center;
   }
   .show-password {
-    margin-bottom: 1rem;
+    margin-bottom: 1px;
     cursor: pointer;
+    font-size: 13px;
+    color: rgb(0, 94, 255);
   }
